--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
+<h1>Multiple Visualisations Update</h1>
 
-<div id="vis"></div>
+<h2>This is the first visualisation</h2>
+<div id="vis1"></div>
+
+<h2>This is the second visualisation</h2>
+<div id="vis2"></div>
 
 <script type="text/javascript">
-  var spec = "https://bodillym.github.io/FIT3179_assignment_2/TestBarChart.json";
-  vegaEmbed('#vis', spec).then(function(result) {
+  var specVis1 = "https://bodillym.github.io/FIT3179_assignment_2/TestBarChart.json";
+  var specVis2= "https://bodillym.github.io/FIT3179_assignment_2/TestLineChart.json";
+
+  vegaEmbed('#vis1', specVis1).then(function(result) {
+  }).catch(console.error);
+  
+   vegaEmbed('#vis2', specVis2).then(function(result) {
   }).catch(console.error);
 </script>
 </body>
