--- a/index.html
+++ b/index.html
@@ -13,15 +13,22 @@
 
 <h2>This is the second visualisation</h2>
 <div id="vis2"></div>
+  
+<h2>This is the third visualisation</h2>
+<div id="vis3"></div>
 
 <script type="text/javascript">
   var specVis1 = "https://bodillym.github.io/FIT3179_assignment_2/TestBarChart.json";
   var specVis2= "https://bodillym.github.io/FIT3179_assignment_2/TestLineChart.json";
+  var specVis3 = "https://bodillym.github.io/FIT3179_assignment_2/TestBoxPlot.json";
 
   vegaEmbed('#vis1', specVis1).then(function(result) {
   }).catch(console.error);
   
    vegaEmbed('#vis2', specVis2).then(function(result) {
+  }).catch(console.error);
+  
+   vegaEmbed('#vis3', specVis3).then(function(result) {
   }).catch(console.error);
 </script>
 </body>
