--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 <h1>Multiple Visualisations Update</h1>
+  
+h1 {
+  color: green;
+  font-family: verdana;
+  text-align: center;
+  }
 
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
