--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-<h1>Multiple Visualisations Update</h1>
+<h1>Skin Cancer Prevalence in Australia</h1>
   
 h1 {
   color: green;
