--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 </head>
 <body>
-<h1>Skin Cancer Prevalence in Australia</h1>
-  
-<h1> {
+<h1>Skin Cancer Prevalence in Australia
+  {
   color: green;
   font-family: verdana;
   text-align: center;
-  }
+  }</h1>
 
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
