--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-<h1 style = "background-color:powderblue;">Skin Cancer Prevalence in Australia</h1>
+<h1 style = "font-family:verdana;background-color:powderblue;text-align:center;">Skin Cancer Prevalence in Australia</h1>
   
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
