--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <style>
+    *{
+      font-family: 'Source Sans Pro', sans-serif;
+    }
+    h1{
+      font-weight: 900;
+    }
+     body{
+       background-color: lightgray;
+     }
+     .page{
+       width: 850px;    
+       background-color: white;   
+       margin: auto;
+       padding: 50px;
+       padding-top: 35px;
+    }
+  </style>
 </head>
 <body>
   
-<h1 style = "font-family:verdana;background-color:LemonChiffon;text-align:center;">Skin Cancer Prevalence in Australia</h1>
+<h1 style = "font-family:source sans pro;background-color:LemonChiffon;text-align:center;">Skin Cancer Prevalence in Australia</h1>
   
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
