--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   
-<h1 style = "font-family:source sans pro;background-color:LemonChiffon;text-align:center;">Skin Cancer Prevalence in Australia</h1>
+<h1 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Prevalence in Australia</h1>
   
 <h2>This is the first visualisation</h2>
 <div id="vis1"></div>
