--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
        padding: 50px;
        padding-top: 35px;
     }
+     .vis-container{
+      width: 100%;
+    }
   </style>
 </head>
 <body>
