--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
      .vis-container{
       width: 100%;
     }
+     .description h2, h1{
+      margin-top:0px;
+    }
+    .description-right {
+      padding-left: 20px;
+    }
+    .description-left{
+      padding-right: 20px;
+    }
+    .pure-g{
+      margin-bottom: 25px;
+    }
+    .small-font{
+        font-size: 14px;
+    }
   </style>
 </head>
 <body>
