--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       font-weight: 900;
     }
      body{
-       background-color: lightgray;
+       background-color: yellow;
      }
      .page{
        width: 850px;    
