--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Skin Cancer Prevalence in Australia</title>
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
+
   <style>
     *{
       font-family: 'Source Sans Pro', sans-serif;
@@ -12,7 +19,7 @@
       font-weight: 900;
     }
      body{
-       background-color: white;
+       background-color: lightgray;
      }
      .page{
        width: 850px;    
@@ -21,10 +28,10 @@
        padding: 50px;
        padding-top: 35px;
     }
-     .vis-container{
+    .vis-container{
       width: 100%;
     }
-     .description h2, h1{
+    .description h2, h1{
       margin-top:0px;
     }
     .description-right {
@@ -42,46 +49,96 @@
   </style>
 </head>
 <body>
-  
-<h1 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Prevalence in Australia</h1>
-  
-<h2>This is the first visualisation</h2>
-<div id="vis1"></div>
 
-<h2>This is the second visualisation</h2>
-<div id="vis2"></div>
-  
-<h2>This is the third visualisation</h2>
-<div id="vis3"></div>
-  
-<h2>This is the fourth visualisation</h2>
-<div id="vis4"></div>
-  
-<h2>This is a heat map</h2>
-<div id="vis5"></div>
+ <div class="page">
 
+   <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h1>Skin Cancer Prevalence in Australia</h1>
+        <p>The following blah blah...</p>
+      </div>
+    </div>
+  <!-- end pure grid group -->
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+        <div class="pure-u-1-3">
+          <div class="description description-left">
+            <h2>This is the first section</h2>
+            <p> Skin cancer is one of the most common types of cancer. As shown by the bar chart on the left, ...
+            </p>
+          </div>
+        </div>
+        <div class="pure-u-2-3">
+          <div id="vis1" class="vis-container"></div>
+        </div>
+    </div>
+    <!-- end pure grid group -->
+   
+    <div class="pure-g">
+      <div class="pure-u-1-3">
+        <div id="vis2"  class="vis-container"></div>
+      </div>
+       <div class="pure-u-1-3">
+        <div class="description description-left">
+          <h2>Skin Cancer Over Time</h2>
+          <p>Skin cancer has been increasing over time...</p>
+        </div>
+      </div>
+      <div class="pure-u-1-3">
+        <div id="vis3"  class="vis-container"></div>
+      </div>
+    
+    </div>
+    <!-- end pure grid group -->
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+        <div class="pure-u-2-3">
+          <div id="vis4"  class="vis-container"></div>
+        </div>
+        <div class="pure-u-1-3">
+          <div class="description description-right">
+            <h2>Incidence per State</h2>
+            <p>This shows how blah blah</p>
+          </div>
+        </div>
+      
+    </div>
+    <!-- end pure grid group -->
+
+  
+    <div class="pure-g">
+      <div class="pure-u-1-1 small-font">
+        <p>This visualisation is created by <a href="https://github.com/KadekSatriadi" target="_blank">Kadek Satriadi</a>. The datasource is <a href="#"" target="_blank">some data repository online</href>.</p>
+      </div>
+    </div>
+  
+
+  </div> <!-- end page -->
+   
 <script type="text/javascript">
   var specVis1 = "https://bodillym.github.io/FIT3179_assignment_2/TestBarChart.json";
-  var specVis2= "https://bodillym.github.io/FIT3179_assignment_2/TestLineChart.json";
-  var specVis3 = "https://bodillym.github.io/FIT3179_assignment_2/ChoroplethMap.json";
-  var specVis4 = "https://bodillym.github.io/FIT3179_assignment_2/TestDivergingChart.json";
-  var specVis5 = "https://bodillym.github.io/FIT3179_assignment_2/TestHeatMap.json";
+  var specVis2 = "https://bodillym.github.io/FIT3179_assignment_2/TestLineChart.json";
+  var specVis3 = "https://bodillym.github.io/FIT3179_assignment_2/TestDivergingChart.json";
+  var specVis4 = "https://bodillym.github.io/FIT3179_assignment_2/ChoroplethMap.json";
 
-  vegaEmbed('#vis1', specVis1).then(function(result) {
+  vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
   
-   vegaEmbed('#vis2', specVis2).then(function(result) {
-  }).catch(console.error);
-  
-   vegaEmbed('#vis3', specVis3).then(function(result) {
-  }).catch(console.error);
-  
-   vegaEmbed('#vis4', specVis4).then(function(result) {
+   vegaEmbed('#vis2', specVis2, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  vegaEmbed('#vis5', specVis5).then(function(result) {
+  vegaEmbed('#vis3', specVis1, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
+  vegaEmbed('#vis4', specVis2, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
 </body>
 </html>
- 
