--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     </div>
     <!-- end pure grid group -->
    
+   <h2 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Over Time</h2>
     <div class="pure-g">
       <div class="pure-u-1-3">
         <div id="vis2"  class="vis-container"></div>
       </div>
        <div class="pure-u-1-3">
         <div class="description description-left">
-          <h2>Skin Cancer Over Time</h2>
           <p>Skin cancer has been increasing over time...</p>
         </div>
       </div>
