--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
     
     </div>
     <!-- end pure grid group -->
+   
+    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of location on skin cancer</h2>
 
     <!-- pure grid group -->
     <div class="pure-g">
@@ -132,11 +134,11 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  vegaEmbed('#vis3', specVis1, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis3', specVis3, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
-  vegaEmbed('#vis4', specVis2, {"actions": false}).then(function(result) {
+  vegaEmbed('#vis4', specVis4, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
