--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-weight: 900;
     }
      body{
-       background-color: LemonChiffon;
+       background-color: DarkBlue;
      }
      .page{
        width: 850px;    
