--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
    <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Skin Cancer Prevalence in Australia</h1>
+        <h1 style = "background-color:Coral;text-align:center;">Skin Cancer Prevalence in Australia</h1>
         <p>The following blah blah...</p>
       </div>
     </div>
