--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
     <div class="pure-g">
       <div class="pure-u-1-1">
         <h1 style = "background-color:Coral;text-align:center;">Skin Cancer Prevalence in Australia</h1>
-        <p>The following blah blah...</p>
       </div>
     </div>
   <!-- end pure grid group -->
@@ -65,8 +64,11 @@
     <div class="pure-g">
         <div class="pure-u-1-3">
           <div class="description description-left">
-            <h2>This is the first section</h2>
-            <p> Skin cancer is one of the most common types of cancer. As shown by the bar chart on the left, ...
+            <p> The following visualisation demonstrates ....
+              
+              The data used spans a 34 year period from the January 1982 to December 2016. 
+              
+              The bar chart on the right shows demonstrates how melanoma of the skin is a leading form of cancer amongst Australians, being in the top five of all cancer diagnoses for both genders. 
             </p>
           </div>
         </div>
