--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <div class="pure-g">
         <div class="pure-u-1-3">
           <div class="description description-left">
-            <p> The following visualisation demonstrates ....
+            <p> The following visualisation demonstrates .... </p>
               
-              The data used spans a 34 year period from the January 1982 to December 2016. 
+            <p> The data used spans a 34 year period from January 1982 to December 2016. </p>
               
-              The bar chart on the right shows demonstrates how melanoma of the skin is a leading form of cancer amongst Australians, being in the top five of all cancer diagnoses for both genders. 
+            <p>  The bar chart on the right demonstrates how melanoma of the skin is a leading form of cancer amongst Australians, being in the top five of all cancer diagnoses for both genders. 
             </p>
           </div>
         </div>
