--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-weight: 900;
     }
      body{
-       background-color: #D3D3D3;
+       background-color: LightGray;
      }
      .page{
        width: 850px;    
