--- a/index.html
+++ b/index.html
@@ -80,16 +80,15 @@
    
    <h2 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Over Time</h2>
     <div class="pure-g">
-      <div class="pure-u-2-3">
-        <div id="vis2"  class="vis-container"></div>
-      </div>
-       <div class="pure-u-1-3">
-        <div class="description description-left">
-          <p>Skin cancer has been increasing over time...</p>
+        <div class="pure-u-2-3">
+          <div id="vis2"  class="vis-container"></div>
         </div>
-      </div>
-
-    
+        <div class="pure-u-1-3">
+          <div class="description description-right">
+            <p>Over time...</p>
+          </div>
+        </div>
+      
     </div>
     <!-- end pure grid group -->
    
