--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
         </div>
       
     </div>
+   
+    <div class="pure-g">
+        <div class="pure-u-1-3">
+          <div class="description description-left">
+            <p> The heat map... </p
+          </div>
+        </div>
+        <div class="pure-u-2-3">
+          <div id="vis5" class="vis-container"></div>
+        </div>
+    </div>
     <!-- end pure grid group -->
   
 
@@ -118,6 +129,7 @@
   var specVis2 = "https://bodillym.github.io/FIT3179_assignment_2/TestLineChart.json";
   var specVis3 = "https://bodillym.github.io/FIT3179_assignment_2/TestDivergingChart.json";
   var specVis4 = "https://bodillym.github.io/FIT3179_assignment_2/ChoroplethMap.json";
+  var specVis5 = "https://bodillym.github.io/FIT3179_assignment_2/TestHeatMap.json";
 
   vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -132,6 +144,10 @@
   }).catch(console.error);
 
   vegaEmbed('#vis4', specVis4, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+  vegaEmbed('#vis5', specVis5, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
