--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
     <!-- end pure grid group -->
    
-    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of location on skin cancer</h2>
+    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of Location on Skin Cancer</h2>
 
     <!-- pure grid group -->
     <div class="pure-g">
