--- a/index.html
+++ b/index.html
@@ -108,18 +108,19 @@
       
     </div>
    
+    <!-- end pure grid group -->
     <div class="pure-g">
+        <div class="pure-u-2-3">
+          <div id="vis5"  class="vis-container"></div>
+        </div>
         <div class="pure-u-1-3">
-          <div class="description description-left">
-            <p> The heat map... </p
+          <div class="description description-right">
+            <p>This heat map....</p>
           </div>
         </div>
-        <div class="pure-u-2-3">
-          <div id="vis5" class="vis-container"></div>
-        </div>
+      
     </div>
     <!-- end pure grid group -->
-  
 
   </div> <!-- end page -->
    
@@ -149,6 +150,7 @@
   vegaEmbed('#vis5', specVis5, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
+  
 </script>
 </body>
 </html> 
