--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="pure-u-1-3">
           <div class="description description-right">
-            <p>This shows how blah blah</p>
+            <p>The choropleth map shows...</p>
           </div>
         </div>
       
