--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
       
     </div>
     <!-- end pure grid group -->
+   
+   <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
 
   </div> <!-- end page -->
    
