--- a/index.html
+++ b/index.html
@@ -111,16 +111,14 @@
     <!-- end pure grid group -->
     <div class="pure-g">
         <div class="pure-u-1-2">
-          <div class="description description-right">
-            <p>This heat map....</p>
+          <div class="description description-left">
+            <p> This heat map... </p>
           </div>
-        <div class="pure-u-1-2">
-          <div id="vis5"  class="vis-container"></div>
         </div>
-       </div>
-      
+        <div class="pure-u-1-2">
+          <div id="vis5" class="vis-container"></div>
+        </div>
     </div>
-    <!-- end pure grid group -->
    
    <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
 
