--- a/index.html
+++ b/index.html
@@ -121,6 +121,18 @@
     </div>
    
    <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
+   
+       <div class="pure-g">
+        <div class="pure-u-2-3">
+          <div id="vis6"  class="vis-container"></div>
+        </div>
+        <div class="pure-u-1-3">
+          <div class="description description-right">
+            <p>The stage of the cancer...</p>
+          </div>
+        </div>
+      
+    </div>
 
   </div> <!-- end page -->
    
@@ -130,6 +142,7 @@
   var specVis3 = "https://bodillym.github.io/FIT3179_assignment_2/TestDivergingChart.json";
   var specVis4 = "https://bodillym.github.io/FIT3179_assignment_2/ChoroplethMap.json";
   var specVis5 = "https://bodillym.github.io/FIT3179_assignment_2/TestHeatMap.json";
+  var specVis6 = "https://bodillym.github.io/FIT3179_assignment_2/ConnectedDotPlot.json";
 
   vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -148,6 +161,10 @@
   }).catch(console.error);
   
   vegaEmbed('#vis5', specVis5, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error); 
+  
+  vegaEmbed('#vis6', specVis6, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error); 
   
