--- a/index.html
+++ b/index.html
@@ -13,16 +13,13 @@
 
   <style>
     *{
-      font-family: 'Source Sans Pro', sans-serif;
+      font-family: Verdana, sans-serif;
     }
     h1{
       font-weight: 900;
     }
-     body{
-       background-color: LightGray;
-     }
      .page{
-       width: 850px;    
+       width: 1400px;    
        background-color: white;   
        margin: auto;
        padding: 50px;
@@ -46,6 +43,11 @@
     .small-font{
         font-size: 14px;
     }
+    .subdiv{
+	text-align: center;
+  background-color: LemonChiffon;
+
+}
   </style>
 </head>
 <body>
@@ -79,7 +81,11 @@
     </div>
     <!-- end pure grid group -->
    
-   <h2 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Over Time</h2>
+     <div class = "pure-g">
+	<div class = "pure-u-1-1 subdiv"> 
+		<h2> Skin Cancer Over Time </h2>
+        </div>
+  </div>
     <div class="pure-g">
         <div class="pure-u-2-3">
           <div id="vis2"  class="vis-container"></div>
@@ -93,7 +99,10 @@
     </div>
     <!-- end pure grid group -->
    
-    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of Location on Skin Cancer</h2>
+    <div class = "pure-u-1-1 subdiv"> 
+		<h2> Impact of Location on Skin Cancer </h2>
+        </div>
+  </div>
 
     <!-- pure grid group -->
     <div class="pure-g">
@@ -120,7 +129,10 @@
         </div>
     </div>
    
-   <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
+   <div class = "pure-u-1-1 subdiv"> 
+		<h2> Factors that Influence Survival </h2>
+        </div>
+  </div>
    
        <div class="pure-g">
         <div class="pure-u-2-3">
