--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     h1{
       font-weight: 900;
     }
+     .initial{
+       width: 1500px;    
+       text-align: center;
+      
+    }  
      .page{
        width: 1400px;    
        background-color: white;   
@@ -40,8 +45,10 @@
     .pure-g{
       margin-bottom: 25px;
     }
-    .small-font{
-        font-size: 14px;
+    body{
+      background-color: white;
+      font-family: Verdana, sans-serif;
+     }
     }
     .subdiv{
 	text-align: center;
