--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
     h1{
       font-weight: 900;
     }
-     .initial{
-       width: 1400px;    
-       text-align: center;
-      
-    }  
+     body{
+       background-color: LightGray;
+     }
      .page{
-       width: 1400px;    
+       width: 850px;    
        background-color: white;   
        margin: auto;
        padding: 50px;
@@ -45,11 +43,14 @@
     .pure-g{
       margin-bottom: 25px;
     }
+    .divider{
+	text-align: center;
+	background-color: Coral; 
     .subdiv{
 	text-align: center;
-  background-color: LemonChiffon;
-
-}
+  	background-color: LemonChiffon;
+     }
+	  
   </style>
 </head>
 <body>
