--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap" rel="stylesheet">
-
   <style>
     *{
-      font-family: Verdana, sans-serif;
+      font-family: 'Source Sans Pro', sans-serif;
     }
     h1{
       font-weight: 900;
@@ -43,14 +41,9 @@
     .pure-g{
       margin-bottom: 25px;
     }
-    .divider{
-	text-align: center;
-	background-color: Coral; 
-    .subdiv{
-	text-align: center;
-  	background-color: LemonChiffon;
-     }
-	  
+    .small-font{
+        font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -84,11 +77,7 @@
     </div>
     <!-- end pure grid group -->
    
-     <div class = "pure-g">
-	<div class = "pure-u-1-1 subdiv"> 
-		<h2> Skin Cancer Over Time </h2>
-        </div>
-  </div>
+   <h2 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Over Time</h2>
     <div class="pure-g">
         <div class="pure-u-2-3">
           <div id="vis2"  class="vis-container"></div>
@@ -102,10 +91,7 @@
     </div>
     <!-- end pure grid group -->
    
-    <div class = "pure-u-1-1 subdiv"> 
-		<h2> Impact of Location on Skin Cancer </h2>
-        </div>
-  </div>
+    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of Location on Skin Cancer</h2>
 
     <!-- pure grid group -->
     <div class="pure-g">
@@ -132,10 +118,7 @@
         </div>
     </div>
    
-   <div class = "pure-u-1-1 subdiv"> 
-		<h2> Factors that Influence Survival </h2>
-        </div>
-  </div>
+   <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
    
        <div class="pure-g">
         <div class="pure-u-2-3">
@@ -185,4 +168,5 @@
   
 </script>
 </body>
-</html> 
+</html>
+
