--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     *{
-      font-family: 'Source Sans Pro', sans-serif;
+      font-family: Verdana, sans-serif;
     }
     h1{
       font-weight: 900;
@@ -42,8 +42,13 @@
       margin-bottom: 25px;
     }
     .small-font{
-        font-size: 14px;
+      font-size: 14px;
     }
+    .subdiv{
+	    text-align: center;
+  	  background-color: LemonChiffon;
+     }
+
   </style>
 </head>
 <body>
@@ -77,7 +82,12 @@
     </div>
     <!-- end pure grid group -->
    
-   <h2 style = "background-color:LemonChiffon;text-align:center;">Skin Cancer Over Time</h2>
+     <div class = "pure-g">
+	    <div class = "pure-u-1-1 subdiv"> 
+		    <h2> Skin Cancer Over Time </h2>
+        </div>
+      </div>
+
     <div class="pure-g">
         <div class="pure-u-2-3">
           <div id="vis2"  class="vis-container"></div>
@@ -91,7 +101,12 @@
     </div>
     <!-- end pure grid group -->
    
-    <h2 style = "background-color:LemonChiffon;text-align:center;">Impact of Location on Skin Cancer</h2>
+     <div class = "pure-g">
+	      <div class = "pure-u-1-1 subdiv"> 
+		        <h2> Impact of Location on Skin Cancer </h2>
+        </div>
+     </div>
+
 
     <!-- pure grid group -->
     <div class="pure-g">
@@ -118,7 +133,12 @@
         </div>
     </div>
    
-   <h2 style = "background-color:LemonChiffon;text-align:center;">Factors That Influence Survival</h2>
+   <div class = "pure-g">
+	    <div class = "pure-u-1-1 subdiv"> 
+		      <h2> Factors that Influence Survival </h2>
+       </div>
+    </div>
+
    
        <div class="pure-g">
         <div class="pure-u-2-3">
