--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
    <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1 style = "background-color:Coral;background-size: 30%,text-align:center;">Skin Cancer Prevalence in Australia</h1>
+        <h1 style = "background-color:Coral;background-size:30%;text-align:center;">Skin Cancer Prevalence in Australia</h1>
       </div>
     </div>
    
