--- a/index.html
+++ b/index.html
@@ -96,6 +96,18 @@
         </div>
       
     </div>
+	 
+    <div class="pure-g">
+        <div class="pure-u-1-2">
+          <div id="vis7"  class="vis-container"></div>
+        </div>
+        <div class="pure-u-1-2">
+          <div class="description description-right">
+            <p>Over time, ...</p>
+          </div>
+        </div>
+      
+    </div>
     <!-- end pure grid group -->
    
      <div class = "pure-g">
@@ -158,6 +170,7 @@
   var specVis4 = "https://bodillym.github.io/FIT3179_assignment_2/ChoroplethMap.json";
   var specVis5 = "https://bodillym.github.io/FIT3179_assignment_2/TestHeatMap.json";
   var specVis6 = "https://bodillym.github.io/FIT3179_assignment_2/ConnectedDotPlot.json";
+  var specVis7 = "https://bodillym.github.io/FIT3179_assignment_2/TestDivergingChart.json";
 
   vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
@@ -180,6 +193,10 @@
   }).catch(console.error); 
   
   vegaEmbed('#vis6', specVis6, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error); 
+	
+  vegaEmbed('#vis7', specVis7, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error); 
   
