--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-weight: 900;
     }
      body{
-       background-color: LightGray;
+       background-color: Coral;
      }
      .page{
        width: 1100px;    
