--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 	    text-align: center;
   	  background-color: LemonChiffon;
      }
+    .subdiv-1{
+	  text-align: center;
+  	  background-color: Coral;
+     }
+
 
   </style>
 </head>
@@ -57,13 +62,11 @@
  <div class="page">
 
    <!-- pure grid group -->
-    <div class="pure-g">
-      <div class="pure-u-1-1">
-	      <p>  </p>
-        <h1 style = "background-color:Coral;text-align:center;">Skin Cancer Prevalence in Australia</h1>
-	      <p>  </p>
-      </div>
-    </div>
+     <div class = "pure-g">
+	      <div class = "pure-u-1-1 subdiv-1"> 
+		        <h2> Skin Cancer Prevalence in Australia </h2>
+        </div>
+     </div>
    
   <!-- end pure grid group -->
 
