--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-weight: 900;
     }
      body{
-       background-color: Coral;
+       background-color: PeachPuff;
      }
      .page{
        width: 1000px;    
