--- a/index.html
+++ b/index.html
@@ -170,6 +170,17 @@
         </div>
       
     </div>
+	
+	<div class="pure-u-1-2">
+		<div class="description description-left">
+			<h2>One Year After Diagnosis</h2>
+			</div>
+		</div>
+	<div class="pure-u-1-2">
+		<div class="description description-right">
+			<h2>Three Years After Diagnosis</h2>
+			</div>
+		</div>
 
   </div> <!-- end page -->
    
