--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
         </div>
       
     </div>
-	
+
+<div class="pure-g">
 	<div class="pure-u-1-2">
 		<div class="description description-left">
 			<h2>One Year After Diagnosis</h2>
@@ -181,6 +182,7 @@
 			<h2>Three Years After Diagnosis</h2>
 			</div>
 		</div>
+	 </div>
 
   </div> <!-- end page -->
    
