--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
           <div id="vis5" class="vis-container"></div>
         </div>
     </div>
+
+<div class = "pure-g">
+    <div class = "pure-u-1-1">
+      <img src = "UVIndex.png">
+    </div>
+</div>
 	 
     <!-- pure grid group -->
     <div class="pure-g">
