--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 <div class = "pure-g">
     <div class = "pure-u-1-1">
-      <img src = "UVIndex.png">
+      <img src = "UVIndex.png" style="width: 450px; height: 149px">
     </div>
 </div>
 	 
