--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
-            <p> This heat map... </p>
+            <p> The UV index is used to indicate when UV radiation from the sun is at dangerous levels. The heat map on the right explores the average daily UV index
+		  per month in popular Australian cities. Alice Springs is found to have the overall highest UV indices, and Kingston is found to have the lowest. The heat map 
+		  also demonstrates how the UV index is significantly lower in the winter season.  </p>
+
+	    <p> The scale below can be used as a UV index reference. </p>
+
+	    <p>  Additonally, the choropleth map below explores the percentage of incidences per state in 2016. We see that Queensland has the highest percentage of incidences. </p>
+		    		
           </div>
         </div>
         <div class="pure-u-1-2">
