--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="pure-u-1-2">
           <div class="description description-right">
-            <p>The line chart above shows how the yearly number of melanoma of the skin diagnoses has drastically increased from 1982 to 2016. </p>
+            <p>The area chart above shows how the yearly number of melanoma of the skin diagnoses has drastically increased from 1982 to 2016. </p>
 		  <p> The diverging bar chart on the left shows how this increase in incidences over time has also led to an increase in deaths. We also see how males experience significantly more deaths than females, where there is almost double the amount of male deaths. </p>
           </div>
         </div>
