--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
 		      <h2> Factors that Influence Survival </h2>
        </div>
     </div>
+<div class="pure-g">
+        <div class="pure-u-1-2">
+          <div id="vis6"  class="vis-container"></div>
+        </div>
 
    
 
