--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
         </div>
       
     </div>
+	 
+	<div class="pure-g">
+		<div class="pure-u-1-1 small-font">
+			<p>Data source: 
+					<a href="https://www.aihw.gov.au/reports/cancer/cancer-data-in-australia/data" target="_blank"> Australian Institute of Health and Welfare</a>
+				</p>
+			</div>
+		</div>
 
   </div> <!-- end page -->
    
