--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 		<div class="pure-u-1-1 small-font">
 			<p>Data source: 
 					<a href="https://www.aihw.gov.au/reports/cancer/cancer-data-in-australia/data" target="_blank"> Australian Institute of Health and Welfare</a>
+				and <a href="https://ncci.canceraustralia.gov.au/outcomes/relative-survival-rate/relative-survival-stage-diagnosis-melanoma" target="_blank"> Cancer Australia</a>
 				</p>
 			</div>
 		</div>
