--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
      body{
        background-color: PeachPuff;
      }
+     p {
+         font-size: 14px;
+	 text-align: justify;
+         }
      .page{
        width: 1000px;    
        background-color: white;   
