--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="description description-left">
             <p> The following visualisation explores the prevalence of skin cancer in Australia. The visualisation specifically looks at how skin cancer diagnoses have changed over time, as well as how location, gender, and age influence melanoma of the skin prevalence and survival. </p>
               
-            <p> The data used spans a 34 year period from January 1982 to December 2016. </p>
+		  <p> The data used spans a <strong>34 year period</strong> from January 1982 to December 2016. </p>
               
             <p>  The bar chart on the right shows the leading forms of cancer amongst Australians, with melanoma of the skin being in the top five of all cancer diagnoses for both genders. 
             </p>
