--- a/index.html
+++ b/index.html
@@ -139,14 +139,15 @@
     </div>
 
 <div class = "pure-g">
-	<div class="pure-u-1-1">
-          <div id="vis4"  class="vis-container"></div>
-        </div>
     <div class = "pure-u-1-2">
-      <img src = "UVIndex.png" style="width: 500px; height: 200px">
+      <img src = "UVIndex.png" style="width: 1000px; height: 200px">
     </div>
 </div>
-	 
+<div class = "pure-g">	 
+	 	<div class="pure-u-1-1">
+          <div id="vis4"  class="vis-container"></div>
+        </div>
+</div>	 
    
      <div class = "pure-g">
 	      <div class = "pure-u-1-1 subdiv"> 
