--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </div>
 <div class = "pure-g">	 
 	 	<div class="pure-u-1-1">
-          <div id="vis4"  class="vis-container"></div>
+          <div id="vis4"  class="vis-container" style="height: 200px;></div>
         </div>
 </div>	 
    
