--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
     </div>
     <!-- end pure grid group -->
 
+	 <div class = "pure-g">
+	      <div class = "pure-u-1-1 subdiv"> 
+		        <h2> Impact of Location on Skin Cancer </h2>
+        </div>
+     </div>
+
     <div class="pure-g">
         <div class="pure-u-1-2">
           <div class="description description-left">
